--- a/Curso-React/meu-projeto/src/componentes/layout/Container.module.css
+++ b/Curso-React/meu-projeto/src/componentes/layout/Container.module.css
@@ -1,14 +1,16 @@
 .container{
-    width: 1200px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     margin: 0 auto;
     flex-wrap: wrap;
     padding: 10px;
-    height: 100vh;
+   
 }    
 
-.start{justify-content: flex-start;}
+.start{
+    justify-content: flex-start;
+}
 
 .column{
     flex-direction: column;
