--- a/Curso-React/meu-projeto/src/componentes/layout/Container.module.css
+++ b/Curso-React/meu-projeto/src/componentes/layout/Container.module.css
@@ -1,11 +1,10 @@
 .container{
-    width: 100%;
+    width: 1200px;
     display: flex;
     justify-content:center;
     margin: 0 auto;
     flex-wrap: wrap;
     padding: 10px;
-   
 }    
 
 .start{
