--- a/Curso-React/meu-projeto/src/componentes/layout/Container.module.css
+++ b/Curso-React/meu-projeto/src/componentes/layout/Container.module.css
@@ -1,7 +1,8 @@
 .container{
     width: 1200px;
     display: flex;
-    justify-content:center;
+    justify-content:space-between;
+    flex-direction: column;
     margin: 0 auto;
     flex-wrap: wrap;
     padding: 10px;
