--- a/atividade-5/src/Components/Countries.css
+++ b/atividade-5/src/Components/Countries.css
@@ -33,6 +33,15 @@
     border-radius: 5px;
 }
 
+.description a{
+    text-decoration: none;
+    color: var(--text);
+}
+
+.description a:hover{
+    text-decoration: underline;
+}
+
 @media screen and (max-width:1200px){
     .area{
         display: flex;
