--- a/atividade-5/src/Components/Country.css
+++ b/atividade-5/src/Components/Country.css
@@ -29,20 +29,72 @@
 
 .modal-content{
     margin-top: 5%;
+    padding: 20px;
 }
 
-/*
-.link{
+.modal-content article {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    color: var(--text);
+}
+
+article .flag img{
+    width: 100%;
+    height: 50vh;
+}
+
+article .flag h3{
+    text-align: center;
+    margin-top: 10px;
+}
+
+article .modal-details{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
+}
+
+article .modal-details .content-area{
+    display: flex;
     flex-direction: column;
-}
-
-.link .buttonBack{
+    justify-content: center;
+    width: 500px;
     padding: 10px;
-    border: 1px solid black;
-    display: flex;
 }
 
-*/
+article .modal-details .content-area .details-area{
+    display: flex;
+    align-items: center;
+}
+
+
+article .modal-details .content-area .area-1 {
+    width: 250px;
+}
+
+article .modal-details .content-area .area-2{
+    width: 250px;
+}
+
+article .modal-details .content-area .borders {
+    margin-top: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+}
+
+article .modal-details .content-area .borders ul{
+    list-style: none;
+}
+
+article .modal-details .content-area .borders ul li{
+    margin-left: 10px;
+    padding: 2px;
+    border: 1px solid black;
+    background-color: #f0ecec;
+}
