--- a/atividade-5/src/Components/Countries.css
+++ b/atividade-5/src/Components/Countries.css
@@ -47,7 +47,6 @@
     .area{
         display: flex;
         width: 100%; 
-        flex-direction: column;
-        align-items: center;
+        justify-content: center;
     }
 }
