--- a/atividade-5/src/Components/Country.css
+++ b/atividade-5/src/Components/Country.css
@@ -81,6 +81,27 @@ article .modal-details .content-area .area-2{
     width: 250px;
 }
 
+@media screen and (max-width:1200px){
+   article{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+   }
+
+   article .flag img{
+        width: 100%;
+        height: 25vh;
+   }
+
+   article .modal-details .content-area .details-area{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    }
+}
+
+/*
+
 article .modal-details .content-area .borders {
     margin-top: 5%;
     display: flex;
@@ -99,3 +120,4 @@ article .modal-details .content-area .borders ul li{
     border: 1px solid black;
     background-color: #f0ecec;
 }
+*/
