--- a/atividade-5/src/Components/Search.css
+++ b/atividade-5/src/Components/Search.css
@@ -45,3 +45,12 @@ nav .select-country select{
     color: var(--text);
     cursor: pointer;
 }
+
+@media screen and (max-width:1200px){
+    nav{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+}
