--- a/atividade-5/src/Components/Countries.css
+++ b/atividade-5/src/Components/Countries.css
@@ -6,13 +6,12 @@
 
 
 .area{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 20px;
-    gap: 40px;
-    color: var(--text);
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   width: 100%;
+   padding: 20px;
+   gap: 40px;
 }
 
 .area .content-area{
@@ -24,6 +23,11 @@
     width: 100%;
     height:200px;
     border-radius: 5px;
+}
+
+.area .content-area{
+    width: 300px;
+    padding: 10px;
 }
 
 .content-area .description{
@@ -46,7 +50,12 @@
 @media screen and (max-width:1200px){
     .area{
         display: flex;
-        width: 100%; 
         justify-content: center;
+        width: 100%;
+    }
+
+    .area article{
+       display: flex;
+       align-items: center;
     }
 }
