--- a/atividade-5/src/Components/Header.css
+++ b/atividade-5/src/Components/Header.css
@@ -1,4 +1,4 @@
---root{
+:root{
     --bg:#ffffff;
     --bg-dark:#2b3945;
     --text:#2b3945;
@@ -24,6 +24,7 @@ header .toggle{
     padding: 10px;
     gap: 10px;
     color: var(--text);
+    cursor: pointer;
 }
 
 @media screen and (max-width:1200px){
