--- a/atividade-7/src/index.css
+++ b/atividade-7/src/index.css
@@ -19,3 +19,26 @@ body{
     background-image: url('img/Santuario.jpg');
     background-repeat: round;
 }
+
+button {
+  font-weight: 700;
+  cursor: pointer;
+  font-size: 1.2rem;
+  padding: 0.8rem 1.5rem;
+  background: linear-gradient(
+    90deg,
+    rgb(244, 243, 245) 0%,
+    rgb(223, 219, 224) 100%
+  );
+  border-radius: 3rem;
+  border: none;
+  color: black;
+}
+
+button:hover {
+  background: linear-gradient(
+    90deg,
+    rgba(240, 235, 232, 1) 0%,
+    rgb(157, 156, 158) 100%
+  );
+}
