--- a/atividade-7/componentes/Question.css
+++ b/atividade-7/componentes/Question.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+*{
+  font-family: 'Inter', sans-serif;
+}
+
+
 #question {
     background-color: rgba(255, 251, 251, 0.829);
     border-radius: 1rem;
@@ -13,6 +20,7 @@
   #question h2 {
     margin-bottom: 2rem;
     color: black;
+    font-size: 18px;
   }
   
   #question button {
