--- a/atividade-7/componentes/Welcome.css
+++ b/atividade-7/componentes/Welcome.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
+*{
+  font-family: 'Inter', sans-serif;
+}
+
 #welcome {
     text-align: center;
     max-width: 500px;
@@ -7,12 +11,10 @@
   
   #welcome h2 {
     margin-bottom: 1rem;
-    font-family: 'Inter', sans-serif;
   }
   
-  
-  /*
   #welcome img {
     margin-top: 2rem;
+    height: 300px;
   }
-  */
+  
