--- a/atividade-12/src/App.css
+++ b/atividade-12/src/App.css
@@ -1,42 +1,105 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body{
+  padding: 30px;
+  background-color: #080707a6;
+  color: #292929;
+}
+
+.app{
+  max-width: 600px;
+  margin: 0 auto 300px;
+  background-color:#efefef;
+  padding: 20px 30px;
+  border-radius: 10px;
+}
+
+h1{
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h2{
+  margin-bottom: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p{
+  margin: 10px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+input{
+  box-sizing: border-box;
 }
 
-.card {
-  padding: 2em;
+button{
+  background-color: #333974;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  opacity: 0.8;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-right: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+button:hover{
+  opacity: 1;
+}
+
+.todo-list{
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #555;
+}
+
+.todo{
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) ;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.complete{
+  background-color: #5cb85c;
+}
+
+.remove{
+  background-color: #d953af;
+}
+
+.todo-form{
+  padding-bottom: 1.5rem;
+}
+
+input,select{
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  border-radius: 3px;
+  width: 100%;
+}
+
+.filter,.search{
+  border-bottom: 1px solid #555;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+
+.filter-options{
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
+}
+
+.filter-options div{
+  flex: 1 1 0;
 }
