--- a/atividade-9/src/componentes/CountryArea.css
+++ b/atividade-9/src/componentes/CountryArea.css
@@ -17,7 +17,7 @@
 .area .content-area{
     width: 300px;
     padding: 10px;
-    border: 1px solid black;
+    box-shadow: 13px 7px 5px 0px rgba(0,0,0,0.75);
 }
 
 .area .content-area img{
