--- a/atividade-13/src/Pages/Cart.css
+++ b/atividade-13/src/Pages/Cart.css
@@ -124,3 +124,43 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
 }
+
+@media (max-width: 768px) {
+  .cart-item {
+    flex-direction: column; 
+    align-items: center;
+  }
+
+  .cart-item img {
+    width: 100px; 
+    height: 100px;
+  }
+
+  .cart-item h3 {
+    font-size: 1rem; 
+  }
+
+  .cart-item p {
+    font-size: 0.9rem; 
+  }
+
+  .remove-btn {
+    font-size: 1.2rem; 
+  }
+
+  .modal {
+    width: 250px; 
+  }
+
+  .modal p {
+    font-size: 1rem; 
+  }
+
+  .confirm-btn, .cancel-btn {
+    font-size: 0.9rem;
+  }
+
+  .cart-container h2 {
+    font-size: 1.6rem; 
+  }
+}
