--- a/atividade-9/src/App.css
+++ b/atividade-9/src/App.css
@@ -1,17 +1,17 @@
 .App{
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
-body.light header {
-  background-color: white;
-  color: black;
+body.light  {
+  background-color: #ffffff;
+  color: #2b3945;
 }
 
 /* Tema escuro */
-body.dark header{
-  background-color: #202c37;
-  color: white;
+body.dark {
+  background-color: #2b3945;
+  color: #ffffff;
 }
 
 a{text-decoration: none;}
