--- a/atividade-9/src/Pages/Home.css
+++ b/atividade-9/src/Pages/Home.css
@@ -48,6 +48,21 @@ nav .select-country select{
     cursor: pointer;
 }
 
+.not-found-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 4rem;
+  font-size: 1.2rem;
+  color: #c93833;
+  text-align: center;
+  gap: 0.5rem;
+}
+
+.error-icon {
+  font-size: 3rem;
+}
+
 @media screen and (max-width:1200px){
     nav{
         width: 100%;
