--- a/atividade-14/src/index.css
+++ b/atividade-14/src/index.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 *{
-    font-family:'Poppins',sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  font-family:'Poppins',sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -12,6 +12,7 @@
   --bg: #f1f5f9;
   --card-bg: #ffffff;
   --text: #222;
+  --text2: #3d3d3d;
   --shadow: rgba(0, 0, 0, 0.1);
 }
 
@@ -34,7 +35,12 @@ body {
 }
 
 .app-title {
-  color: var(--primary);
+  color: var(--text2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  gap: 10px;
   margin-bottom: 1.5rem;
   font-weight: 600;
 }
