--- a/atividade-14/src/index.css
+++ b/atividade-14/src/index.css
@@ -58,6 +58,20 @@ body.dark {
   font-weight: 600;
 }
 
+.mode-toggle{
+  background-color: transparent;
+  padding: 5px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 0.5s all;
+}
+
+.mode-toggle:hover{
+  opacity: 1;
+}
+
 .icon {
   color: var(--text2);
 }
